Clase 6 Retos terminados. JPD. 29-11-22

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=MinTicCiclo2Java
-main.class=Reto1_Rifa.Rifa
+main.class=Reto1_RifaElDePython.Rifa
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
